@@ -85,15 +85,15 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>maven-cucumber-bdd</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>test</scope>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.1</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.automation.testing</groupId>
-            <artifactId>com.automation.testing</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-picocontainer</artifactId>
+            <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -117,9 +117,19 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
+<!--                <configuration>-->
+<!--                    <includes>-->
+<!--                        <include>**/*/TestRunner.java</include>-->
+<!--                    </includes>-->
+<!--                </configuration>-->
                 <configuration>
+                    <parallel>classes</parallel>
+                    <forkMode>perthread</forkMode>
+                    <threadCount>3</threadCount>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <testFailureIgnore>true</testFailureIgnore>
                     <includes>
-                        <include>**/*/BankGuruTestRunner.java</include>
+                        <include>**/NopCommerceTestRunner.java</include>
                     </includes>
                 </configuration>
             </plugin>
